1. upgrade to java 11 2. change parent proj. to spring boot parent 3. upgrade libs all tests passed