@@ -1,7 +1,6 @@
 package com.github.javafaker.matchers;
 
 import org.hamcrest.Description;
-import org.hamcrest.Factory;
 import org.hamcrest.Matcher;
 import org.hamcrest.TypeSafeMatcher;
 
@@ -10,7 +9,7 @@ public class IsANumber extends TypeSafeMatcher<String> {
     @Override
     protected boolean matchesSafely(String item) {
         try {
-            new Double(item);
+            Double.valueOf(item);
         } catch (NumberFormatException nfe) {
             return false;
         }
@@ -22,7 +21,6 @@ public class IsANumber extends TypeSafeMatcher<String> {
         description.appendText("is a number");
     }
 
-    @Factory
     public static <T> Matcher<String> isANumber() {
         return new IsANumber();
     }
